--- a/plutus-book/doc/03-UTxO.adoc
+++ b/plutus-book/doc/03-UTxO.adoc
@@ -47,6 +47,7 @@ only one output of 2 Ada, and Alice, a total of 58 Ada in unspent outputs
 from other transactions.
 
 [#tx-flow]
+.UTxO Funds Flow Example
 image::UTxO_pic.png[]
 
 The above model is strictly showing the flow of currency between several
@@ -76,7 +77,7 @@ For the basic transaction
 model we discuss here, refer to <<utxo-definitions>>.
 
 [#utxo-definitions]
-// .Basic UTxO definitions
+.Basic UTxO definitions
 image::UTxO.png[]
 
 Before we examine the structure of transactions, let us look at how book keeping
@@ -170,9 +171,11 @@ addresses.
 Now, in order to validate a transaction, there are a number of
 calculations performed involving the ADA in the transaction and the ADA
 in other accounts on the ledger to make sure ADA is neither created nor destroyed,
-so to say. This is known as the generalized accounting property. It is the enforcement
-of this property,
-and not an inherent invariant of the UTxO transaction processing scheme, that
+so to say. This is known as the _generalized accounting property_.
+The UTxO accounting scheme provides built-in protection against double spending
+of a given output.
+This inherent protection, together with the enforcement of the generalized
+accounting property,
 ensures that no dishonest spending is allowed to occur. This is a crucial property
 of the Cardano ledger bookkeeping system, in particular because there is a
 set amount of Ada in existence, which can never change.
