--- a/plutus-book/doc/plutus.adoc
+++ b/plutus-book/doc/plutus.adoc
@@ -50,7 +50,7 @@ include::colophon.adoc[]
 
 include::01-preface.adoc[]
 
-include::03-UTxO.adoc[]
+include::03-UTXO.adoc[]
 
 include::04-smartcont.adoc[]
 
